--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-react-dapp-example",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "Simple Web3 Boilerplate for React DApps",
   "source": "src/index.html",
   "bin": "./bin/cli.js",
@@ -38,6 +38,6 @@
     "connect wallet to your react app",
     "DApp",
     "web3-react",
-    "parce-dapp"
+    "parcel-dapp"
   ]
 }
